# coral

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  app.cpp  entrypoint.cpp
src/: application.cpp  application.hpp  base.cpp  base.hpp
src/core/: application.cpp  application.h  application.hpp  base.h  coralLogger.cpp  coralLogger.h  timestep.h  uuid.cpp  uuid.h  window.cpp  window.hpp
src/event/: event.h  keyCodes.h
src/renderer/: buffer.cpp  buffer.h  camera.h  renderer.cpp  renderer.h  renderer.hpp  shader.cpp  shader.h  texture.cpp  texture.h
